added composite vsbs options to onboarding experiment blueprint

--- a/eve-catalogue-gui/src/app/blueprints-compnents/blueprints-e-stepper/blueprints-e-stepper.component.css
+++ b/eve-catalogue-gui/src/app/blueprints-compnents/blueprints-e-stepper/blueprints-e-stepper.component.css
@@ -41,6 +41,12 @@ td {
     float: left;
 }
 
+.input-label-nsd {
+    font-style: oblique;
+    font-weight: bold; 
+    display: block; 
+}
+
 p {
     font-size: 12px;
     color: black;
