--- a/eve-catalogue-gui/src/app/descriptors-e-stepper/descriptors-e-stepper.component.html
+++ b/eve-catalogue-gui/src/app/descriptors-e-stepper/descriptors-e-stepper.component.html
@@ -30,7 +30,14 @@
             <mat-form-field appearance="outline" color=primary class="rules-full-width">
                 <input matInput placeholder="Version" formControlName="vsDescVersion" required>
             </mat-form-field>
-            <div class="margin-top"></div>
+            <mat-form-field appearance="outline" color=primary class="rules-full-width">
+                <mat-label>Management Type</mat-label>
+                <mat-select formControlName="managementType" name="managementType" >
+                    <mat-option *ngFor="let type of managementTypes" [value]="type" class="dee-table">
+                        {{type}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
             <mat-expansion-panel class="dee-table">
                 <mat-expansion-panel-header>
                     <mat-panel-title>QoS Parameters</mat-panel-title>
@@ -43,28 +50,72 @@
                 </div>
             </mat-expansion-panel>
             <div class="margin-top"></div>
-            <mat-expansion-panel class="dee-table">
-                <mat-expansion-panel-header>
-                    <mat-panel-title>Slice Parameters</mat-panel-title>
-                </mat-expansion-panel-header>
-                <mat-form-field appearance="outline" color=primary class="rules-full-width">
-                    <mat-label>Management Type</mat-label>
-                    <mat-select formControlName="managementType" name="managementType" >
-                        <mat-option *ngFor="let type of managementTypes" [value]="type" class="dee-table">
-                            {{type}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-                <mat-form-field appearance="outline" color=primary class="rules-full-width">
-                    <mat-label>Slice Service Type</mat-label>
-                    <mat-select formControlName="ssType" name="ssType">
-                        <mat-option *ngFor="let type of ssTypes" [value]="type">
-                            {{type}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-                <mat-checkbox #publicVSD formControlName="isPublic">Public</mat-checkbox>
-            </mat-expansion-panel>
+            <div *ngFor="let con of ranCon">
+                <mat-expansion-panel class="dee-table">
+                    <mat-expansion-panel-header>
+                        <mat-panel-title>Slice Parameters For {{con}}</mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <mat-form-field appearance="outline" color=primary class="rules-full-width">
+                        <mat-label>Radio Access Technology</mat-label>
+                        <mat-select formControlName="radioAccessTechnology" name="radioAccessTechnology" (selectionChange)="sliceProfilesElements($event,con,'radio');">
+                            <mat-option *ngFor="let radio of radioAccessTechnology" [value]="radio" class="dee-table">
+                                {{radio}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+
+                    <div *ngIf="embbMode">
+                        <mat-form-field appearance="outline" color=primary class="rules-full-width">
+                            <input matInput #descName placeholder="Uplink Throughput"  required (keyup)="sliceProfilesElements($event,con,'Uplink')">
+                        </mat-form-field>
+                        <mat-form-field appearance="outline" color=primary class="rules-full-width" (keyup)="sliceProfilesElements($event,con,'Downlink')">
+                            <input matInput #descName placeholder="Downlink Throughput"  required>
+                        </mat-form-field>
+
+                    </div>
+                    <div *ngIf="urllcMode">
+                        <mat-form-field appearance="outline" color=primary class="rules-full-width">
+                            <input matInput #descName placeholder="latency"  required (keyup)="sliceProfilesElements($event,con,'latency')">
+                        </mat-form-field>
+                    </div>
+                    <!--
+                    <mat-form-field appearance="outline" color=primary class="rules-full-width">
+                        <mat-label>Slice Service Type</mat-label>
+                        <mat-select formControlName="ssType" name="ssType">
+                            <mat-option *ngFor="let type of ssTypes" [value]="type">
+                                {{type}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                    -->
+                  <!-- <mat-checkbox #publicVSD formControlName="isPublic">Public</mat-checkbox>--> 
+                </mat-expansion-panel>
+                <div class="margin-top"></div>
+            </div>
+            <!--
+                         <mat-expansion-panel class="dee-table">
+                    <mat-expansion-panel-header>
+                        <mat-panel-title>Slice Parameters For {{con}}</mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <mat-form-field appearance="outline" color=primary class="rules-full-width">
+                        <mat-label>Management Type</mat-label>
+                        <mat-select formControlName="managementType" name="managementType" >
+                            <mat-option *ngFor="let type of managementTypes" [value]="type" class="dee-table">
+                                {{type}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                    <mat-form-field appearance="outline" color=primary class="rules-full-width">
+                        <mat-label>Slice Service Type</mat-label>
+                        <mat-select formControlName="ssType" name="ssType">
+                            <mat-option *ngFor="let type of ssTypes" [value]="type">
+                                {{type}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                    <mat-checkbox #publicVSD formControlName="isPublic">Public</mat-checkbox>
+                </mat-expansion-panel>
+            -->
             <div class="margin-top">
                 <button mat-raised-button matStepperPrevious color="primary" class="margin-all">Back</button>
                 <button mat-raised-button matStepperNext color="primary" class="margin-all" [disabled]="secondFormGroup.invalid">Next</button>
